# Event-Driven-Ai-Voice

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .coverage  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9ec54cec5c1d_create_core_tables.py  b4f3e2d1a5c8_add_client_type_to_call_sessions.py
backend/router_registry/v1/: policies.yaml  router_prompt.json  router_prompt.yaml  router_prompt_ambiguous.json  router_prompt_conflicting_triggers.json  router_prompt_contradictory.json  router_prompt_excessive_fillers.json  router_prompt_extreme_context.json  router_prompt_forced_guardrails.json  router_prompt_minimal.json  router_prompt_multilang_chaos.json  router_prompt_phantom_dept.json  thresholds.yaml
backend/src/: config.py  main.py
backend/src/api/: app.py  rabbitmq.py
backend/src/infrastructure/: db.py  rabbitmq_consumer.py  rabbitmq_events.py  rabbitmq_publisher.py  redis_client.py  session_models.py  session_registry.py  session_repository.py  telemetry.py
backend/src/routing/: context.py  embeddings.py  language.py  lexicon.py  llm_fallback.py  model_router.py  policies.py  registry.py  router.py
backend/src/voice_runtime/: agent_fsm.py  bus.py  conversation_buffer.py  coordinator.py  events.py  openai_realtime_provider.py  realtime_bridge.py  realtime_client.py  realtime_event_bridge.py  realtime_provider.py  specialist_tools.py  state.py  tool_executor.py  turn_manager.py  types.py  voice_client.py  voice_client_factory.py
backend/tests/e2e/: conftest.py  test_debug_pipeline_e2e.py  test_event_pipeline.py
backend/tests/integration/: conftest.py  test_calls_client_type.py  test_coordinator_bridge_integration.py  test_redis.py  test_repositories.py
backend/tests/unit/: test_agent_fsm.py  test_bus.py  test_conversation_buffer.py  test_coordinator.py  test_debug_events.py  test_entities.py  test_events.py  test_lexicon.py  test_model_router.py  test_openai_realtime_provider.py  test_realtime_bridge.py  test_realtime_client.py  test_realtime_event_bridge.py  test_registry.py  test_routing.py  test_routing_context.py  test_session_repository.py  test_specialist_tools.py  test_tool_executor.py  test_turn_manager.py  (+6 more)
(+225 files in other folders)
